syntax="proto3";

package storehouse_service;
option go_package="genproto/storehouse_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service Request_productService {
    rpc CreateRequest_product(CreateRequest_productRequest) returns (Request_product) {}
    rpc GetByIDRequest_product(Request_productPrimaryKey) returns (Request_product) {}
    rpc GetListRequest_product(GetListRequest_productRequest) returns (GetListRequest_productResponse) {}
    rpc UpdateRequest_product(UpdateRequest_productRequest) returns (Request_product) {}
    rpc UpdatePatchRequest_product(UpdatePatchRequest_productRequest) returns (Request_product) {}
    rpc DeleteRequest_product(Request_productPrimaryKey) returns (google.protobuf.Empty) {}
}

message Request_productPrimaryKey {
    string id = 1;
}

message Request_product {
    string id = 1;
    int32 quantity = 2;
    string size_type = 3;
    double size_value = 4;
    string weight_type = 5;
    double weight_value = 6;
    string status = 7;
    string branch_id = 8;
    string product_id = 9;
    string request_id = 10;
    string created_at = 11;
    string updated_at = 12;
}

message CreateRequest_productRequest {
    int32 quantity = 1;
    string size_type = 2;
    double size_value = 3;
    string weight_type = 4;
    double weight_value = 5;
    string status = 6;
}

message UpdateRequest_productRequest {
    string id = 1;
    int32 quantity = 2;
    string size_type = 3;
    double size_value = 4;
    string weight_type = 5;
    double weight_value = 6;
    string status = 7;
    string branch_id = 8;
    string product_id = 9;
    string request_id = 10;
}

message UpdatePatchRequest_productRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListRequest_productRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetListRequest_productResponse {
    int32 count = 1;
    repeated Request_product request_products = 2;
}
